tests/ui/offset-of/offset-of-inference.stderr
error[E0282]: type annotations needed
  --> $DIR/offset-of-inference.rs:8:35
   |
LL |     let _ = core::mem::offset_of!(Foo<_>, x);
   |                                   ^^^^^^ cannot infer type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
